--- a/style.css
+++ b/style.css
@@ -110,3 +110,8 @@ body{
 #to_top:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
+.emp{
+    color: #911410;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
