--- a/style.css
+++ b/style.css
@@ -53,20 +53,17 @@ body{
     color:#380404;
 }
 #prof_intro{
-    display: flex;
+    display: grid;
 }
 #pic_me{
-    flex: 1;
+    grid-column: 1/ span 1;
     border-radius: 100%;
     margin:6px;
-    display: block;
-    max-width:500px;
-    max-height:500px;
-    width: auto;
-    height: auto;
+    max-width: 500px;
+    max-height: 500px;
 }
 #web_dev_text{
-    flex: 2;
+    grid-column: 2/ span 1;
     text-align: justify;
     font-size: 24px;
 }
