--- a/style.css
+++ b/style.css
@@ -102,8 +102,28 @@ body{
     list-style: none;
 }
 #qual{
+    grid-column: 1/span 3;
+    grid-row: 1/span 2;
+}
+#skill_1{
     grid-column: 2/span 1;
     grid-row: 1/span 1;
+}
+#skill_2{
+    grid-column: 3/span 1;
+    grid-row: 1/span 1;
+}
+#skill_3{
+     grid-column: 1/span 1;
+     grid-row: 2/span 1;
+}
+#skill_4{
+      grid-column: 2/span 1;
+      grid-row: 2/span 1;
+}
+#skill_5{
+       grid-column: 3/span 1;
+       grid-row: 2/span 1;
 }
 #past_prj{
     display: block;
