--- a/style.css
+++ b/style.css
@@ -93,37 +93,48 @@ body{
     align-content: center;
     justify-content: space-around;
 }
-
 #e-courses{
     grid-column: 1/span 1;
     grid-row: 1/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #e-courses ul{
     list-style: none;
 }
-#qual{
+/*#qual{
     grid-column: 1/span 3;
     grid-row: 1/span 2;
-}
+}*/
 #skill_1{
     grid-column: 2/span 1;
     grid-row: 1/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #skill_2{
     grid-column: 3/span 1;
     grid-row: 1/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #skill_3{
-     grid-column: 1/span 1;
-     grid-row: 2/span 1;
+    grid-column: 1/span 1;
+    grid-row: 2/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #skill_4{
-      grid-column: 2/span 1;
-      grid-row: 2/span 1;
+    grid-column: 2/span 1;
+    grid-row: 2/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #skill_5{
-       grid-column: 3/span 1;
-       grid-row: 2/span 1;
+    grid-column: 3/span 1;
+    grid-row: 2/span 1;
+    max-width: 33%;
+    max-height: 50%;
 }
 #past_prj{
     display: block;
