--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     padding:0;
     box-sizing:border-box;
     float: inherit;
+    border: 0;
+
 }
 /*add external source just in case in case*/
 @font-face {
@@ -11,24 +13,30 @@
     src:url("img/indieFlower-Regular.ttf")
 }
 body{
-    font-family:"Indie Flower",'Brush Script MT','cursive';
-    background: #CEB774;
-    color: #080427;
+    font-family:"sans-serif";
+    background: darkgray;
+    color: white;
     font-size: 24px;
     margin: 5px;
     text-align: center;
 }
 /*styling for navbar id*/
 #navbar{
-    background:#B7AF15;
-    color:#911410;
+    background:black;
+    color:white;
     overflow:auto;
-    position: sticky;
     text-align: left;
+    position: sticky;
+}
+#navbar .icon{
+    display: none;
+}
+#logo{
+    max-height: 4rem;
 }
 /*styling for anchors in navbar id*/
 #navbar a{
-    color:#911410;
+    color:white;
     font-size: 20px;
 }
 /*styling for unordered lists in navbar id*/
@@ -49,8 +57,17 @@ body{
 }
 /*styling for anchor links in hover in list items in unordered lists in navbar id and the current class*/
 #navbar ul li a:hover{
-    background:#CEB774;
-    color:#380404;
+    background:gray;
+    color:white;
+}
+a{
+    color:white;
+}
+a:hover{
+    color:grey;
+}
+footer{
+    background: black;
 }
 #prof_intro{
     display: grid;
@@ -101,6 +118,9 @@ body{
 }
 #e-courses ul{
     list-style: none;
+}
+#e-courses ul li a:hover{
+    color: grey;
 }
 /*#qual{
     grid-column: 1/span 3;
@@ -155,43 +175,53 @@ body{
     height: 40rem;
 }
 #prj1 img,#prj2 img,#prj3 img{
-    max-height: 40rem;
-    max-width: 40rem;
+    max-width: 38rem;
 }
 #hobbies{
     grid-column: 1/span 1;
     grid-row: 1/span 1;
+    width: 20rem;
 }
 #self_intro{
-    grid-column: 2/span 1;
+    grid-column: 2/span 2;
     grid-row: 1/span 1;
     text-align: center;
+    width: 80rem;
 }
 #to_top {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
 }
 
 #to_top:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
 .emp{
-    color: #911410;
+    color: black;
     font-weight: bold;
     font-size: 1.2em;
 }
 .grid-container{
     display: grid;
     grid-column-gap:5px ;
+}
+#icons{
+
+}
+i{
+    color: white;
+}
+i:hover{
+    color: grey;
 }
