--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     background: darkgray;
     color: white;
     font-size: 24px;
-    margin: 5px;
+    margin: 0;
     text-align: center;
 }
 /*styling for navbar id*/
@@ -27,12 +27,18 @@ body{
     overflow:auto;
     text-align: left;
     position: sticky;
+    width:100%;
+    padding:0;
 }
 #navbar .icon{
     display: none;
 }
 #logo{
     max-height: 4rem;
+    display:inline;
+}
+#logo_large{
+    display:none;
 }
 /*styling for anchors in navbar id*/
 #navbar a{
@@ -83,6 +89,7 @@ footer{
     grid-column: 2/ span 1;
     text-align: justify;
     font-size: 24px;
+    padding:15px;
 }
 /*#past_exp{
     display: flex;
@@ -93,31 +100,54 @@ footer{
     /* flex:1;*/
     grid-column: 1/span 1;
     grid-row: 1/span 2;
+    height:40rem;
+    padding-top:15px;
+    padding-bottom:15px;
+    border: 6px solid black;
 }
 #work_exp{
     /*flex: 2;*/
     grid-column: 2/span 1;
     grid-row: 1/span 3;
+    height:40rem;
+    padding-top:15px;
+    padding-bottom:15px;
+    text-align: center;
+    list-style-position: inside; 
+    border: 6px solid black;
 }
 #guests{
     /*flex: 3;*/
     grid-column: 3/span 1;
     grid-row: 1/span 1;
+    height:40rem;
+    padding-top:15px;
+    padding-bottom:15px;
+    border: 6px solid black;
 }
 #self-education{
     text-align: center;
     display: flex;
     align-content: center;
     justify-content: space-around;
+    padding-top:15px;
+    padding-bottom:15px;
+    border: 6px solid black;
+    height:40rem;
 }
 #e-courses{
     grid-column: 1/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    padding-top:15px;
+    padding-bottom:15px;
+    text-align:center;
+    border: 6px solid black;
 }
 #e-courses ul{
-    list-style: none;
+    text-align: center;
+    list-style-position: inside;
 }
 #e-courses ul li a:hover{
     color: grey;
@@ -129,50 +159,64 @@ footer{
 #skill_1{
     grid-column: 2/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
 }
 #skill_2{
     grid-column: 3/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
+
 }
 #skill_3{
     grid-column: 1/span 1;
     grid-row: 2/span 1;
-    width: 40rem;
-    height: 40rem;
+    width: 100%;
+    height: 40rem;    
+    border: 6px solid black;
 }
 #skill_4{
     grid-column: 2/span 1;
     grid-row: 2/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
 }
 #skill_5{
     grid-column: 3/span 1;
     grid-row: 2/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
 }
 #prj1{
     grid-column: 1/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    padding-top: 3rem;
+    border: 6px solid black;
 }
 #prj2{
     grid-column: 2/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
+}
+#prj2 h2{
+    font-size:3rem;
 }
 #prj3{
     grid-column: 3/span 1;
     grid-row: 1/span 1;
-    width: 40rem;
+    width: 100%;
     height: 40rem;
+    border: 6px solid black;
+    padding-top: 3rem;
 }
 #prj1 img,#prj2 img,#prj3 img{
     max-width: 38rem;
@@ -180,13 +224,21 @@ footer{
 #hobbies{
     grid-column: 1/span 1;
     grid-row: 1/span 1;
-    width: 20rem;
+    width: 100%;
+    padding:15px;
+    border: 6px solid black;
 }
 #self_intro{
-    grid-column: 2/span 2;
+    grid-column: 2/span 3;
     grid-row: 1/span 1;
     text-align: center;
-    width: 80rem;
+    width: 100%;
+    border: 6px solid black;
+    padding:15px;
+}
+#self_intro ul{
+    text-align: center;
+    list-style-position: inside;
 }
 #to_top {
   display: none;
@@ -216,8 +268,10 @@ footer{
     display: grid;
     grid-column-gap:5px ;
 }
-#icons{
-
+#icons a{
+    padding-left:5px;
+    padding-right:5px;
+    text-decoration:none;
 }
 i{
     color: white;
@@ -225,3 +279,15 @@ i{
 i:hover{
     color: grey;
 }
+.verline{
+    border-left: 6px solid black;
+    height: 500px;
+}
+.horline{
+    border-top: 6px solid black;
+}
+@media only screen and (max-width: 1200px) and (min-width: 700px){
+    #education, #work_exp, #guests{
+    height:1200px;
+}
+};
